[package]
name = "pal-encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futuresdr = {version="0.0.30", features = ["zeromq", "seify"]}
seify = {version = "0.4", features = ["soapy"]}
plotters = "0.3"
crc32fast = "1.3"
image = "0.24"
